...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XYE-LM-f3b" userLabel="Like button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="4Sb-Vd-NPO"/>
                                                        <constraint firstAttribute="height" constant="44" id="6Fp-hm-Fsy"/>
                                                    </constraints>
                                                    <state key="normal" title="Button"/>
                                                    <buttonConfiguration key="configuration" style="plain" image="Active"/>
...
                    <view key="view" contentMode="scaleToFill" id="CEA-gF-8v0">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PQg-7W-qGr">
                                <rect key="frame" x="37" y="631" width="318" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="AuthButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Myo-p6-DFv"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <backgroundConfiguration key="background">
...
                                <rect key="frame" x="121" y="43" width="150" height="4"/>
                                <color key="progressTintColor" name="YP Black (iOS)"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="GO0-cj-tNV"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="WebView">
                            <accessibilityTraits key="traits" staticText="YES" searchField="YES"/>
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="wqY-cl-Rup" firstAttribute="top" secondItem="GO0-cj-tNV" secondAttribute="top" id="2kq-pV-pCq"/>
                            <constraint firstItem="eSV-AT-YQN" firstAttribute="leading" secondItem="t9G-X9-GtX" secondAttribute="leading" id="2yK-Er-V2q"/>
...
                                <connections>
                                    <action selector="didTapShareButton:" destination="bjl-Zb-iyT" eventType="touchUpInside" id="jYL-tS-z0C"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i1S-01-sJa" userLabel="returnButton">
                                <rect key="frame" x="8" y="70" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="24" id="XgD-JZ-gFR"/>
                                    <constraint firstAttribute="height" constant="24" id="lwP-da-mYu"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="Backward"/>
...
