...
        presenter?.configLogoutAlert(true)
    }
    
    // MARK: - Public methods
    
    func showLogoutAlert(alert: DialogAlertModel, isYes: Bool ) {
        dialogAlertPresenter.show(alertModel: alert, controller: self, isYes: isYes, accessibilityId: "LogoutDialogAlert")
    }
    
    func showSplashWindow() {
        let viewController = SplashViewController()
        viewController.modalPresentationStyle = .fullScreen
        present(viewController, animated: true, completion: nil)
...
        guard let image = UIImage(systemName: "ipad.and.arrow.forward") else { return }
        logOutButton = UIButton.systemButton(
            with: image,
            target: self,
            action: #selector(self.didTapLogoutButton)
        )
        logOutButton.accessibilityIdentifier = "LogoutButton"
        logOutButton.tintColor = UIColor(named: "YP Red (iOS)")
        logOutButton.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(logOutButton)
    }
    
    private func profileImageConstraints() {
...
