//
//  AlertConstants.swift
//  ImageFeed
//
//  Created by Aleksey Kosichenko on 14.07.2026.
//

import Foundation

//MARK: - AlertConstants

enum AlertsConstants {
    static let authErrorHeader = "Что-то пошло не так"
    static let authErrorMessage = "Не удалось войти в систему"
    static let authErrorButtonText = "Ок"
    static let networkErrorHeader = "Что-то пошло не так"
    static let networkErrorMessage = "Нет соединения с сетью"
    static let networkErrorButtonText = "Попробовать еще раз"
    static let logoutHeader = "Пока, пока!"
    static let logoutMessage = "Уверены, что хотите выйти?"
    static let logoutButtonYes = "Да"
    static let logoutButtonNo = "Нет"
}
